Update 1주차 과제 (2020.05.25).md

--- a/1주차 과제 (2020.05.25).md
+++ b/1주차 과제 (2020.05.25).md
@@ -1,6 +1,6 @@
 ### 언어
 # 오르페오사운드웍스, 60개 이상 언어 실시간 통역 'AI 코드리스 이어폰' 발표
-[!img](/img/아큐디오.jpg)
+![img](/img/아큐디오.jpg)
 	오르페오사운드윅스가 인공지능 이어버드 '아큐디오(Accudio) 발표.
     - 60개 이상 언어의 실시간 통역이 가능
         - 구글, 마이크로소프트, 네이버 등 다양한 통번역 플랫폼을 동시에 연동시켜,
