--- a/1주차 과제 (2020.05.25).md
+++ b/1주차 과제 (2020.05.25).md
@@ -1,33 +1,31 @@
 ### 언어
 # 오르페오사운드웍스, 60개 이상 언어 실시간 통역 'AI 코드리스 이어폰' 발표
-![img](/img/아큐디오.jpg)
-	오르페오사운드윅스가 인공지능 이어버드 '아큐디오(Accudio) 발표.
-    - 60개 이상 언어의 실시간 통역이 가능
-        - 구글, 마이크로소프트, 네이버 등 다양한 통번역 플랫폼을 동시에 연동시켜,
-      번역이 가장 매끄러운 플랫폼과 자동 연결을 지원하며 최적의 실시간 통역서비스 제공
+![img](/img/아큐디오.jpg)  
+오르페오사운드윅스가 인공지능 이어버드 '아큐디오(Accudio) 발표.  
+- 60개 이상 언어의 실시간 통역이 가능  
+- 구글, 마이크로소프트, 네이버 등 다양한 통번역 플랫폼을 동시에 연동시켜,  
+  번역이 가장 매끄러운 플랫폼과 자동 연결을 지원하며 최적의 실시간 통역서비스 제공
 
 ### 음성
 # 네이버, 사람에 가까운 목소리 만드는 음성 합성 기술 ‘NES’ 공개
-[!img](/img/NES.jpg)
-	네이버가 짧은 녹음만으로 고품질의 합성음을 제작할 수 있는 클로바의 음성 합성 신기술 ‘NES(Natural End–to-end Speech Synthesis)’을 공개하고, 이를 기반으로 보이스 비즈니스 서비스를 제공한다.
-	-  40분 수준의 음성 데이터(약 400문장)로 실제 사람의 음성에 가까운 자연스러운 합성음을 제작할 수 있는 기술
-	-  특정 분야에 대한 제약 없이 사용할 수 있으며, 기본 목소리 외에 기쁨·슬픔 등 감정이 반영된 목소리도 제공
+![img](/img/NES.jpg)
+네이버가 짧은 녹음만으로 고품질의 합성음을 제작할 수 있는 클로바의 음성 합성 신기술 ‘NES(Natural End–to-end Speech Synthesis)’을 공개하고, 이를 기반으로 보이스 비즈니스 서비스를 제공한다.  
+-  40분 수준의 음성 데이터(약 400문장)로 실제 사람의 음성에 가까운 자연스러운 합성음을 제작할 수 있는 기술
+-  특정 분야에 대한 제약 없이 사용할 수 있으며, 기본 목소리 외에 기쁨·슬픔 등 감정이 반영된 목소리도 제공
 
 ### 이미지
 # 인공지능이 내 손글씨를 '글꼴'로 탄생시킨다
-[!img](/img/손글씨.jpg)
-	네이버가 사용자의 손글씨를 클로바 인공지능(AI) 기술을 통해 '나눔손글씨' 글꼴로 제작하는 기술을 개발했다.
-	
-	국내 최고 수준의 OCR(Optical Character Recognition, 광학 문자 판독) 기술을 통해 컴퓨터가 사용자의 손글씨를 인식하고, 딥러닝 기술로 방대한 손글씨 데이터를 사전에 학습한 모델이 글씨체의 특징을 추출한다. 글씨체의 특징을 적용한 글꼴을 제작하는 데는 이미지 생성 기술이 접목된다.
+![img](/img/손글씨.jpg)
+네이버가 사용자의 손글씨를 클로바 인공지능(AI) 기술을 통해 '나눔손글씨' 글꼴로 제작하는 기술을 개발했다.
+- 국내 최고 수준의 OCR(Optical Character Recognition, 광학 문자 판독) 기술을 통해 컴퓨터가 사용자의 손글씨를 인식
+- 딥러닝 기술로 방대한 손글씨 데이터를 사전에 학습한 모델이 글씨체의 특징을 추출
+- 글씨체의 특징을 적용한 글꼴을 제작하는 데는 이미지 생성 기술이 접목
 
 ### 자율주행
 # 현대기아차, AI 기반 '부분 자율주행' 기술 최초 개발...신차에 적용한다
-[!img](/img/자율주행.jpg)
-	현대자동차와 기아자동차는 운전자의 주행성향에 맞는 부분 자율주행을 구현하는 기술인 SCC-ML을 세계 최초로 개발
-	
-	스마트 크루즈 컨트롤 SCC은 앞차와의 거리를 일정하게 유지해 운전자가 설정한 속도로 자율주행을 해주는 기능으로 ADAS(첨단 운전자보조 시스템)의 주요 기술 중 하나다. SCC-ML은 여기에 AI기술을 더해 운전자의 주행성향을 차가 스스로 학습해 SCC 작동 시 운전자와 거의 흡사한 패턴으로 자율주행을 해준다.
-	
-	SCC-ML의 원리는 먼저 전방카메라, 레이더 등의 센서가 다양한 운전상황에서 발생되는 정보를 지속적으로 수집해 ADAS의 두뇌격인 제어컴퓨터로 보낸다. 제어컴퓨터는 입력된 정보로부터 운전자의 주행습관을 추출해 종합적인 주행성향을 파악한다. 이때 인공지능 기술 중 하나인 머신러닝 알고리즘이 적용된다.
-주행성향은 크게 보면 앞차와의 거리, 가속성(얼마나 신속하게 가속하는지), 반응성(주행환경에 얼마나 민첩하게 반응하는지) 세 가지로 나눌 수 있으며 거기에 더해 다양한 속도와 주변 차량과의 거리 조건을 모두 고려
+![img](/img/자율주행.jpg)
+현대자동차와 기아자동차는 운전자의 주행성향에 맞는 부분 자율주행을 구현하는 기술인 SCC-ML을 세계 최초로 개발  
+스마트 크루즈 컨트롤 SCC은 앞차와의 거리를 일정하게 유지해 운전자가 설정한 속도로 자율주행을 해주는 기능으로 ADAS(첨단 운전자보조 시스템)의 주요 기술 중 하나다. SCC-ML은 여기에 AI기술을 더해 운전자의 주행성향을 차가 스스로 학습해 SCC 작동 시 운전자와 거의 흡사한 패턴으로 자율주행을 해준다.  
+SCC-ML의 원리는 먼저 전방카메라, 레이더 등의 센서가 다양한 운전상황에서 발생되는 정보를 지속적으로 수집해 ADAS의 두뇌격인 제어컴퓨터로 보낸다. 제어컴퓨터는 입력된 정보로부터 운전자의 주행습관을 추출해 종합적인 주행성향을 파악한다. 이때 인공지능 기술 중 하나인 머신러닝 알고리즘이 적용된다.  
+주행성향은 크게 보면 앞차와의 거리, 가속성(얼마나 신속하게 가속하는지), 반응성(주행환경에 얼마나 민첩하게 반응하는지) 세 가지로 나눌 수 있으며 거기에 더해 다양한 속도와 주변 차량과의 거리 조건을 모두 고려했다.  
 주행성향에 대한 정보는 센서를 통해 계속 업데이트되기 때문에 운전자의 최근 성향을 반영할 수 있다. 또 안전운전을 크게 벗어난 주행성향은 따르지 않도록 설정돼 있어서 신뢰성을 높였다. 또 SCC-ML은 자동 차로 변경 기능을 포함하고 있는 HDA II와 함께 적용돼 자율주행 레벨 2을 넘어선 레벨 2.5 수준을 구현한다.
-
