--- a/1주차 과제 (2020.05.25).md
+++ b/1주차 과제 (2020.05.25).md
@@ -15,7 +15,7 @@
 
 ### 이미지
 # 인공지능이 내 손글씨를 '글꼴'로 탄생시킨다
-![img](/img/손글씨.jpg)
+![img](/img/손글씨.jpg)  
 네이버가 사용자의 손글씨를 클로바 인공지능(AI) 기술을 통해 '나눔손글씨' 글꼴로 제작하는 기술을 개발했다.
 - 국내 최고 수준의 OCR(Optical Character Recognition, 광학 문자 판독) 기술을 통해 컴퓨터가 사용자의 손글씨를 인식
 - 딥러닝 기술로 방대한 손글씨 데이터를 사전에 학습한 모델이 글씨체의 특징을 추출
@@ -23,9 +23,19 @@
 
 ### 자율주행
 # 현대기아차, AI 기반 '부분 자율주행' 기술 최초 개발...신차에 적용한다
-![img](/img/자율주행.jpg)
-현대자동차와 기아자동차는 운전자의 주행성향에 맞는 부분 자율주행을 구현하는 기술인 SCC-ML을 세계 최초로 개발  
-스마트 크루즈 컨트롤 SCC은 앞차와의 거리를 일정하게 유지해 운전자가 설정한 속도로 자율주행을 해주는 기능으로 ADAS(첨단 운전자보조 시스템)의 주요 기술 중 하나다. SCC-ML은 여기에 AI기술을 더해 운전자의 주행성향을 차가 스스로 학습해 SCC 작동 시 운전자와 거의 흡사한 패턴으로 자율주행을 해준다.  
-SCC-ML의 원리는 먼저 전방카메라, 레이더 등의 센서가 다양한 운전상황에서 발생되는 정보를 지속적으로 수집해 ADAS의 두뇌격인 제어컴퓨터로 보낸다. 제어컴퓨터는 입력된 정보로부터 운전자의 주행습관을 추출해 종합적인 주행성향을 파악한다. 이때 인공지능 기술 중 하나인 머신러닝 알고리즘이 적용된다.  
-주행성향은 크게 보면 앞차와의 거리, 가속성(얼마나 신속하게 가속하는지), 반응성(주행환경에 얼마나 민첩하게 반응하는지) 세 가지로 나눌 수 있으며 거기에 더해 다양한 속도와 주변 차량과의 거리 조건을 모두 고려했다.  
-주행성향에 대한 정보는 센서를 통해 계속 업데이트되기 때문에 운전자의 최근 성향을 반영할 수 있다. 또 안전운전을 크게 벗어난 주행성향은 따르지 않도록 설정돼 있어서 신뢰성을 높였다. 또 SCC-ML은 자동 차로 변경 기능을 포함하고 있는 HDA II와 함께 적용돼 자율주행 레벨 2을 넘어선 레벨 2.5 수준을 구현한다.
+![img](/img/자율주행.jpg)  
+현대자동차와 기아자동차는 운전자의 주행성향에 맞는 부분 자율주행을 구현하는 기술인 SCC-ML을 세계 최초로 개발했다.
+- 스마트 크루즈 컨트롤 SCC은 앞차와의 거리를 일정하게 유지해 운전자가 설정한 속도로 자율주행을 해주는 기능  
+-> SCC-ML은 여기에 AI기술을 더해 운전자의 주행성향을 차가 스스로 학습해 SCC 작동 시 운전자와 거의 흡사한 패턴으로 자율주행을 해준다.  
+~~~
+SCC-ML의 원리  
+먼저 전방카메라, 레이더 등의 센서가 다양한 운전상황에서 발생되는 정보를 지속적으로 수집해 ADAS의 두뇌격인 제어컴퓨터로 보낸다.  
+제어컴퓨터는 입력된 정보로부터 운전자의 주행습관을 추출해 종합적인 주행성향을 파악한다.  
+이때 인공지능 기술 중 하나인 머신러닝 알고리즘이 적용된다.  
+  
+주행성향은 크게 보면 앞차와의 거리, 가속성(얼마나 신속하게 가속하는지), 반응성(주행환경에 얼마나 민첩하게 반응하는지) 세 가지로 나눈다.  
+거기에 더해 다양한 속도와 주변 차량과의 거리 조건을 모두 고려했다.  
+주행성향에 대한 정보는 센서를 통해 계속 업데이트되기 때문에 운전자의 최근 성향을 반영할 수 있다.  
+또 안전운전을 크게 벗어난 주행성향은 따르지 않도록 설정돼 있어서 신뢰성을 높였다.  
+또 SCC-ML은 자동 차로 변경 기능을 포함하고 있는 HDA II와 함께 적용돼 자율주행 레벨 2을 넘어선 레벨 2.5 수준을 구현한다.
+~~~
